// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестируем компонент input Тестируем рендер компонента input 1`] = `
<Input
  label="label"
  type="text"
>
  <div
    className="FormItem"
  >
    <input
      className="FormText"
      type="text"
    />
    <label
      className="FormLabel"
      htmlFor="undefined"
    >
      label
    </label>
  </div>
</Input>
`;

exports[`Тестируем компонент input Тестируем событие 1`] = `
<Input
  name="value"
  onChange={[Function]}
  type="text"
  value="test1"
>
  <div
    className="FormItem"
  >
    <input
      className="FormText"
      name="value"
      onChange={[Function]}
      type="text"
      value="test1"
    />
  </div>
</Input>
`;

exports[`Тестируем компонент input Тестируем событие 2`] = `
<Input
  name="value"
  onChange={[Function]}
  type="text"
  value="test2"
>
  <div
    className="FormItem"
  >
    <input
      className="FormText"
      name="value"
      onChange={[Function]}
      type="text"
      value="test2"
    />
  </div>
</Input>
`;
